--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
+:root {
+    --primary-color: black;
+}
+
 h1, h2, h3, div, main, nav, p, section {
     margin: 0;
     padding: 0;
 }
 
+#home h1 {
+    text-align: center;
+/*    font-family: 'Roboto', sans-serif;
+    font-size: 5 rem; */
+}
 
 #home div.baner p {
     text-align: center;
@@ -18,3 +27,9 @@ header nav ul {
     list-style-type: none;
     justify-content: space-around;
 }
+
+header nav ul li a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: var(--primary-color);
+    }
