--- a/css/index.css
+++ b/css/index.css
@@ -21,10 +21,6 @@ body header div img {
     width: 100%;
 }
 
-body footer div img {
-    display: block;
-    width: 100%;
-}
 
 header div.banner h1{
     text-align: center;
@@ -37,6 +33,12 @@ header div.banner h1{
     font-family: 'Roboto', sans-serif;
     font-size: 1.6rem;
     color: var(--secondary-color);
+}
+
+h3 {
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.2rem;
 }
 
 header nav ul {
@@ -55,6 +57,15 @@ header nav ul li a {
 
 header nav ul li a:hover {
     text-decoration: underline;
+}
+
+#about_us p {
+    display: flex;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+    font-size: 1.1rem;
 }
 
 /*.wrap {
@@ -103,7 +114,7 @@ header nav ul li a:hover {
 
 .g-box:nth-child(odd) img {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   margin: auto;
   height: 50px;
   width: 50px;
@@ -114,10 +125,15 @@ header nav ul li a:hover {
   width: auto;
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: repeat(2 50px, 150px);
+  grid-template-columns: 50px, 150px;
+  flex-wrap: wrap;
 }
 
-
+figcaption {
+     text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1rem;
+}
 
 @media (max-width: 370px) {
     #home .motto h2 {
@@ -127,6 +143,7 @@ header nav ul li a:hover {
         text-align: center;
         font-size: 1.5rem;
         margin: 0px 0;
+        background-color: #F5F0DD;
     }
 }
 
@@ -153,3 +170,17 @@ header .banner {
     display: flex;
     justify-content: center;
 }
+
+
+body footer div img {
+    display: block;
+    width: 100%;
+}
+
+body footer p {
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 0.9rem;
+    color: var(--primaary-color);
+}
+
