--- a/css/index.css
+++ b/css/index.css
@@ -102,25 +102,30 @@ header nav ul li a:hover {
 .g-box {
   border: 1px solid black;
   border-radius: 5px;
-  padding: 10px;
-  font-size: 150%;
+  padding: 5px;
+  font-size: 130%;
 }
 
 .g-box:nth-child(even) {
   background-color: #ccc;
   color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
 .g-box:nth-child(odd) img {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   margin: auto;
   height: 50px;
   width: 50px;
 }
 
-@media (min-width: 470px) {
+@media (min-width: 510px) {
 .grid {
   display: grid;
   grid-gap: 10px;
@@ -139,7 +144,7 @@ figcaption {
 }
 
 
-@media (max-width: 469px) {
+@media (max-width: 509px) {
 .grid {
   width: auto;
   display: grid;
