--- a/css/index.css
+++ b/css/index.css
@@ -35,6 +35,11 @@ header div.banner h1 {
     font-size: 2rem;
 }
 
+.map iframe{
+    width: 100%;
+    padding: 5px;
+}
+
 #home .motto h2 {
     text-align: center;
     font-family: 'Roboto', sans-serif;
